# QtQML

./: .gitignore  README.md
QML_Positioning_Elements/untitled/: BlueSquare.qml  CMakeLists.txt  ColumnExample.qml  GreenSquare.qml  Main.qml  RedSquare.qml  RowExample.qml
Quick_Starter_Animation/Demo/: AnimationExample.qml  CMakeLists.txt
Quick_Starter_Canvas/Demo/: CMakeLists.txt  ColorSquare.qml  Main.qml
Quick_Starter_Layout_Items/: CMakeLists.txt  Main.qml  main.cpp
Quick_Starter_Model_View/Demo/: BlueBox.qml  Box.qml  CMakeLists.txt  Main.qml
Quick_Starter_States_and_Transitions/Demo/: CMakeLists.txt  Main.qml  main.cpp
Quick_Starter_Text_Input/: CMakeLists.txt  Main.qml  TLineEditV1.qml  TLineEditV2.qml  main.cpp
